tests/ui/closure-expected-type/expect-two-infer-vars-supply-ty-with-bound-region.stderr
error[E0282]: type annotations needed
  --> $DIR/expect-two-infer-vars-supply-ty-with-bound-region.rs:8:27
   |
LL |     with_closure(|x: u32, y| {});
   |                           ^
   |
note: type must be known for type parameter in this
  --> $DIR/expect-two-infer-vars-supply-ty-with-bound-region.rs:1:1
   |
LL | / fn with_closure<F, A, B>(_: F)
LL | |     where F: FnOnce(A, B)
   | |_________________________^
help: consider giving this closure parameter an explicit type
   |
LL |     with_closure(|x: u32, y: /* Type */| {});
   |                            ++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
